# tiny-fmm

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  mkdocs.yml  setup.py  test.py
.github/workflows/: wheels.yml
app/: fmm.cpp
cubao_cmake_example/: __init__.py  __main__.py
data/: Makefile
docs/: code.md  index.md
docs/about/: license.md  release-notes.md
python/: cubao_inline.hpp  main.cpp  pybind11_crs_transform.cpp  pybind11_crs_transform.hpp  pybind11_fast_crossing.cpp  pybind11_fast_crossing.hpp  pybind11_flatbush.cpp  pybind11_flatbush.hpp  pybind11_polyline_ruler.cpp  pybind11_tinyfmm_network.cpp
src/: main.cpp
src/tiny_fmm/: fmm-api.hpp
src/tiny_fmm/algorithm/: geom_algorithm.cpp  geom_algorithm.hpp
src/tiny_fmm/config/: gps_config.cpp  gps_config.hpp  network_config.cpp  network_config.hpp  result_config.cpp  result_config.hpp
src/tiny_fmm/core/: geometry.cpp  geometry.hpp  gps.hpp
src/tiny_fmm/io/: gps_reader.cpp  gps_reader.hpp  mm_writer.cpp  mm_writer.hpp
src/tiny_fmm/mm/: composite_graph.cpp  composite_graph.hpp  mm_type.hpp  transition_graph.cpp
src/tiny_fmm/mm/fmm/: fmm_algorithm.cpp  fmm_algorithm.hpp  fmm_app.cpp  fmm_app.hpp  fmm_app_config.cpp  fmm_app_config.hpp  ubodt.cpp  ubodt.hpp  ubodt_gen_algorithm.cpp  ubodt_gen_algorithm.hpp  ubodt_gen_app.cpp  ubodt_gen_app.hpp  ubodt_gen_app_config.cpp  ubodt_gen_app_config.hpp
src/tiny_fmm/mm/h3mm/: h3_header.hpp  h3_type.hpp  h3_util.hpp  h3mm.hpp  h3mm_app.hpp  h3mm_writer.hpp
src/tiny_fmm/mm/stmatch/: stmatch_algorithm.cpp  stmatch_algorithm.hpp  stmatch_app.cpp  stmatch_app.hpp  stmatch_app_config.cpp  stmatch_app_config.hpp
src/tiny_fmm/network/: bidirectional_network_graph.cpp  bidirectional_network_graph.hpp  graph.hpp  heap.hpp  network.cpp  network.hpp  network_graph.cpp  rtree.cpp  rtree.hpp  type.hpp
src/tiny_fmm/python/: pyfmm.hpp
src/tiny_fmm/util/: cubao_helpers.hpp  cubao_types.hpp  debug.hpp  util.cpp  util.hpp
tests/: test_basic.py  test_cubao.cpp
tiny_fmm/: __init__.py
